--- a/travelsite.html
+++ b/travelsite.html
@@ -36,7 +36,7 @@
         body {
             background-size: cover;
             background: linear-gradient(to top right, #ccff99 0%, #ff99cc 100%);
-            font-family: Verdana;
+            font-family:veranda;
         }
 
         .places {
@@ -99,16 +99,15 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Photos</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#text">About</a></li>
+            <li><a href="#places">Photos</a></li>
+            <li><a href="#contact">Contact</a></li>
 
 
 
             <a href="https://www.facebook.com/">
             <i class="fa fa-facebook-square" style="font-size:24px; color:white">
                 </i></a>
-    
 
             <a href="https://www.tumblr.com/">
          <i class="fa fa-tumblr-square" style="font-size:24px;color:white"></i>
@@ -130,7 +129,7 @@
         <div class="media">
             <img src="assets/img/world-map.png">
         </div>
-        <div class="text">
+        <div class="text" id=text>
             <p>
 
                 Welcome! Hi, my name is Janelise Burgos. I am 25 years old. I am currently risiding in New York City. I have a passion for traveling the world. Every little detail of the world excites me. My main thing about traveling is always keeping an open mind about where I am traveling to. For instance, if I am traveling to a place I am not only looking to feel carefree and realxed but to also learn about the different cultures. I love when the places I travel to are not completely americanized. Its always good to try new foods, new activies, and meet new people. You can get the whole feel of where you are tarveling to. Traveling to me is beyond a vacation. Its an experince that can never be forgotten. If you're as passonate as I am to travel the world continue scrolling to learn some really cool tips on traveling.
@@ -149,7 +148,7 @@
 
 
 
-        <div class="places">
+        <div class="places" id=places>
             <img src="assets/img/jamaica.jpg">
             <img src="assets/img/bahamas.jpg">
             <img src="assets/img/mexico.jpg">
@@ -220,18 +219,18 @@
             <h2>Questions about traveling?</h2>
         </center>
         <br>
-        <div class="contact">
+        <div class="contact" id=contact>
             <form>
                 <br>
-                <label for="f1">First Name<br />
+                <label for="f1">First Name:<br />
 				<input id="f1" type="text" name="text1" />
 			</label>
                 <br />
-                <label for="f2">Last Name<br />
+                <label for="f2">Last Name:<br />
 				<input id="f2" type="text" name="text2" />
 			</label>
                 <br />
-                <label for="f3">Email<br />
+                <label for="f3">Email:<br />
 				<input id="f2" type="text" name="text2" />
 			</label>
                 <br>
