--- a/travelsite.html
+++ b/travelsite.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -36,7 +36,7 @@
         body {
             background-size: cover;
             background: linear-gradient(to top right, #ccff99 0%, #ff99cc 100%);
-            font-family:veranda;
+            font-family: sans-serif;
         }
 
         .places {
@@ -132,35 +132,41 @@
         <div class="text" id=text>
             <p>
 
-                Welcome! Hi, my name is Janelise Burgos. I am 25 years old. I am currently risiding in New York City. I have a passion for traveling the world. Every little detail of the world excites me. My main thing about traveling is always keeping an open mind about where I am traveling to. For instance, if I am traveling to a place I am not only looking to feel carefree and realxed but to also learn about the different cultures. I love when the places I travel to are not completely americanized. Its always good to try new foods, new activies, and meet new people. You can get the whole feel of where you are tarveling to. Traveling to me is beyond a vacation. Its an experince that can never be forgotten. If you're as passonate as I am to travel the world continue scrolling to learn some really cool tips on traveling.
+                <h1>Welcome!
+                    <i class="fa fa-plane" style="font-size:36px;"></i></h1>
+                My name is Janelise Burgos. I am 25 years old. I am currently risiding in New York City. I have a passion for traveling the world. Every little detail of the world excites me. My main thing about traveling is always keeping an open mind about where I am traveling to. For instance, if I am traveling to a place I am not only looking to feel carefree and realxed but to also learn about the different cultures. I love when the places I travel to are not completely americanized. Its always good to try new foods, new activies, and meet new people. You can get the whole feel of where you are tarveling to. Traveling to me is beyond a vacation. Its an experince that can never be forgotten. If you're as passonate as I am to travel the world continue scrolling to learn some really cool tips on traveling.
             </p>
+
         </div>
 
         <br style="clear:both" ;>
-    </div>
+
+    
     <br>
+    <center>
+        <div class="destination" id=destination>
+            <h1>Places I've Traveled</h1>
 
-    <div class="destination">
-        <h3>Places I've Traveled</h3>
-
-        <p>
-            Jamaica, Bahamas, Mexico, Florida, Puerto Rico, New Orleans</p>
-
-
-
-        <div class="places" id=places>
-            <img src="assets/img/jamaica.jpg">
-            <img src="assets/img/bahamas.jpg">
-            <img src="assets/img/mexico.jpg">
-            <img src="assets/img/puertorico.jpg">
-            <img src="assets/img/neworleans.jpg">
-
+            <p>
+                Jamaica, Bahamas, Mexico, Florida, Puerto Rico, New Orleans</p>
         </div>
+    </center>
+
+
+    <div class="places" id=places>
+        <img src="assets/img/jamaica.jpg">
+        <img src="assets/img/bahamas.jpg">
+        <img src="assets/img/mexico.jpg">
+        <img src="assets/img/puertorico.jpg">
+        <img src="assets/img/neworleans.jpg">
+
+    </div>
 
 
 
+    <center>
         <div class="goals">
-            <h3>Places I want to visit</h3>
+            <h1>Places I want to visit</h1>
             <ol>1. Thailand</ol>
             <ol>2. Cuba</ol>
             <ol>3. Paris</ol>
@@ -169,81 +175,84 @@
             <ol>6. Bora Bora</ol>
 
         </div>
+    </center>
 
 
+    <br>
+
+
+    <div class="media">
+
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/PQefqx7rAS4?rel=0" frameborder="0" allowfullscreen></iframe>
+
+    </div>
+
+
+    <div class="text">
+        <h1>Tips for what to Pack </h1>
+        <br>
+        <ol>1. Passport/ID</ol>
+        <ol>2. Wallet (Money)</ol>
+        <ol>3. Bug Spray (Depends on destinaion)</ol>
+        <ol>4. 3.4oz Tolitries</ol>
+        <ol>5. Medicine</ol>
+        <ol>6. Waterproof phone case</ol>
 
         <br>
+        <br>
+
+    </div>
+    <br style="clear:both" ;>
+
+    <div class="text">
+        <h1> Afforable Sites to Book a Flight</h1>
+        <ol>1. www.Expedia.com</ol>
+        <ol>2. www.Cheapcarribean.com</ol>
+        <ol>3. www.Kayak.com</ol>
+    </div>
+
+    <div class="media">
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/qPIozbjNmkw" frameborder="0" allowfullscreen></iframe>
+
+    </div>
 
 
-        <div class="media">
 
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/PQefqx7rAS4?rel=0" frameborder="0" allowfullscreen></iframe>
+    <br style="clear:both" ;>
+    <br>
+    <br>
 
-        </div>
 
 
-        <div class="text">
-            <h3>Tips for what to Pack </h3>
+    <center>
+        <h2>Questions about traveling?</h2>
+    </center>
+    <br>
+    <div class="contact" id=contact>
+        <form>
             <br>
-            <ol>1. Passport/ID</ol>
-            <ol>2. Wallet (Money)</ol>
-            <ol>3. Bug Spray (Depends on destinaion)</ol>
-            <ol>4. 3.4oz Tolitries</ol>
-            <ol>5. Medicine</ol>
-            <ol>6. Waterproof phone case</ol>
-
-        </div>
-        <br style="clear:both" ;>
-
-        <div class="text">
-            <h3> Afforable Sites to Book a Flight</h3>
-            <ol>1. www.Expedia.com</ol>
-            <ol>2. www.Cheapcarribean.com</ol>
-            <ol>3. www.Kayak.com</ol>
-        </div>
-
-        <div class="media">
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/qPIozbjNmkw" frameborder="0" allowfullscreen></iframe>
-
-        </div>
-
-
-
-        <br style="clear:both" ;>
-        <br>
-        <br>
-
-
-
-        <center>
-            <h2>Questions about traveling?</h2>
-        </center>
-        <br>
-        <div class="contact" id=contact>
-            <form>
-                <br>
-                <label for="f1">First Name:<br />
+            <label for="f1">First Name:<br />
 				<input id="f1" type="text" name="text1" />
 			</label>
-                <br />
-                <label for="f2">Last Name:<br />
+            <br />
+            <label for="f2">Last Name:<br />
 				<input id="f2" type="text" name="text2" />
 			</label>
-                <br />
-                <label for="f3">Email:<br />
+            <br />
+            <label for="f3">Email:<br />
 				<input id="f2" type="text" name="text2" />
 			</label>
-                <br>
-                <br>
-                <textarea>Share your thoughts!</textarea>
-                <br>
-                <label for="f15"><br />
+            <br>
+            <br>
+            <textarea>Share your thoughts!</textarea>
+            <br>
+            <label for="f15"><br />
 				<input id="f15" type="button" name="subbtn" value="Submit" />
 			</label>
-            </form>
+        </form>
 
 
-        </div>
+    </div>
 
 
 
