--- a/travelsite.html
+++ b/travelsite.html
@@ -127,7 +127,7 @@
     <br>
     <div class="section">
         <div class="media">
-            <img src="assets/img/world-map.png">
+            <img src="assets/img/World-Map.png">
         </div>
         <div class="text" id=text>
             <p>
@@ -154,7 +154,7 @@
 
 
     <div class="places" id=places>
-        <img src="assets/img/jamaica.jpg">
+        <img src="assets/img/Jamaica.jpg">
         <img src="assets/img/bahamas.jpg">
         <img src="assets/img/mexico.jpg">
         <img src="assets/img/puertorico.jpg">
