--- a/travelsite.html
+++ b/travelsite.html
@@ -36,7 +36,7 @@
         body {
             background-size: cover;
             background: linear-gradient(to top right, #ccff99 0%, #ff99cc 100%);
-            font-family: sans-serif;
+            font-family: 'Marcellus SC', serif;
         }
 
         .places {
@@ -47,6 +47,7 @@
         .places img {
             width: 200px;
             height: 150px;
+           
         }
 
         form {
@@ -92,6 +93,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Marcellus+SC" rel="stylesheet">
 </head>
 
 
@@ -127,13 +129,13 @@
     <br>
     <div class="section">
         <div class="media">
-            <img src="assets/img/world-map.png">
+            <img src="assets/img/World-Map.png">
         </div>
         <div class="text" id=text>
             <p>
-
                 <h1>Welcome!
-                    <i class="fa fa-plane" style="font-size:36px;"></i></h1>
+                    <i class="fa fa-plane" style="font-size:36px;"></i>
+                </h1>
                 My name is Janelise Burgos. I am 25 years old. I am currently risiding in New York City. I have a passion for traveling the world. Every little detail of the world excites me. My main thing about traveling is always keeping an open mind about where I am traveling to. For instance, if I am traveling to a place I am not only looking to feel carefree and realxed but to also learn about the different cultures. I love when the places I travel to are not completely americanized. Its always good to try new foods, new activies, and meet new people. You can get the whole feel of where you are tarveling to. Traveling to me is beyond a vacation. Its an experince that can never be forgotten. If you're as passonate as I am to travel the world continue scrolling to learn some really cool tips on traveling.
             </p>
 
@@ -141,118 +143,123 @@
 
         <br style="clear:both" ;>
 
-    
-    <br>
-    <center>
-        <div class="destination" id=destination>
-            <h1>Places I've Traveled</h1>
 
-            <p>
-                Jamaica, Bahamas, Mexico, Florida, Puerto Rico, New Orleans</p>
-        </div>
-    </center>
+        <br>
+        <center>
+            <div class="destination" id=destination>
+                <h1>Places I've Traveled</h1>
 
-
-    <div class="places" id=places>
-        <img src="assets/img/jamaica.jpg">
-        <img src="assets/img/bahamas.jpg">
-        <img src="assets/img/mexico.jpg">
-        <img src="assets/img/puertorico.jpg">
-        <img src="assets/img/neworleans.jpg">
-
-    </div>
+                <p>
+                    Jamaica, Bahamas, Mexico, Florida, Puerto Rico, New Orleans</p>
+            </div>
+        </center>
 
 
-
-    <center>
-        <div class="goals">
-            <h1>Places I want to visit</h1>
-            <ol>1. Thailand</ol>
-            <ol>2. Cuba</ol>
-            <ol>3. Paris</ol>
-            <ol>4. Egypt</ol>
-            <ol>5. Dubai</ol>
-            <ol>6. Bora Bora</ol>
+        <div class="places" id=places>
+            <img src="assets/img/Jamaica.jpg">
+            <img src="assets/img/bahamas.jpg">
+            <img src="assets/img/mexico.jpg">
+            <img src="assets/img/puertorico.jpg">
+            <img src="assets/img/neworleans.jpg">
 
         </div>
-    </center>
 
 
-    <br>
 
+        <center>
+            <div class="goals">
+                <h1>Places I want to visit</h1>
+                <ol>1. Thailand</ol>
+                <ol>2. Cuba</ol>
+                <ol>3. Paris</ol>
+                <ol>4. Egypt</ol>
+                <ol>5. Dubai</ol>
+                <ol>6. Bora Bora</ol>
 
-    <div class="media">
+            </div>
+        </center>
 
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/PQefqx7rAS4?rel=0" frameborder="0" allowfullscreen></iframe>
-
-    </div>
-
-
-    <div class="text">
-        <h1>Tips for what to Pack </h1>
-        <br>
-        <ol>1. Passport/ID</ol>
-        <ol>2. Wallet (Money)</ol>
-        <ol>3. Bug Spray (Depends on destinaion)</ol>
-        <ol>4. 3.4oz Tolitries</ol>
-        <ol>5. Medicine</ol>
-        <ol>6. Waterproof phone case</ol>
 
         <br>
-        <br>
-
-    </div>
-    <br style="clear:both" ;>
-
-    <div class="text">
-        <h1> Afforable Sites to Book a Flight</h1>
-        <ol>1. www.Expedia.com</ol>
-        <ol>2. www.Cheapcarribean.com</ol>
-        <ol>3. www.Kayak.com</ol>
-    </div>
-
-    <div class="media">
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/qPIozbjNmkw" frameborder="0" allowfullscreen></iframe>
-
-    </div>
 
 
+        <div class="media">
 
-    <br style="clear:both" ;>
-    <br>
-    <br>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/PQefqx7rAS4?rel=0" frameborder="0" allowfullscreen></iframe>
+
+        </div>
 
 
-
-    <center>
-        <h2>Questions about traveling?</h2>
-    </center>
-    <br>
-    <div class="contact" id=contact>
-        <form>
+        <div class="text">
+            <h1>Tips for what to Pack </h1>
             <br>
-            <label for="f1">First Name:<br />
+            <ol>Passport/ID</ol>
+            <ol>Wallet (Money)</ol>
+            <ol>Bug Spray (Depends on destinaion)</ol>
+            <ol>3.4oz Tolitries</ol>
+            <ol>Medicine</ol>
+            <ol>Waterproof phone case</ol>
+            <ol>*More ideas in the video!</ol>
+
+            <br>
+            <br>
+
+        </div>
+        <br style="clear:both" ;>
+
+        <div class="text">
+            <h1> Afforable Sites to Book a Flight</h1>
+            <ol>Kayak.com</ol>
+            <ol>CheapOair.com</ol>
+            <ol>Cheapair.com</ol>
+            <ol>Cheaptickets.com</ol>
+            <ol>Priceline.com</ol>
+            <ol>Expedia.com</ol>
+        </div>
+
+
+
+        <div class="media"><iframe width="100%" height="315" src="https://www.youtube.com/embed/wZyBRL8xLFo" frameborder="0" allowfullscreen></iframe>
+
+        </div>
+
+
+
+        <br style="clear:both" ;>
+        <br>
+        <br>
+
+
+
+        <center>
+            <h2>Questions about traveling?</h2>
+        </center>
+        <br>
+        <div class="contact" id=contact>
+            <form>
+                <br>
+                <label for="f1">First Name:<br />
 				<input id="f1" type="text" name="text1" />
 			</label>
-            <br />
-            <label for="f2">Last Name:<br />
+                <br />
+                <label for="f2">Last Name:<br />
 				<input id="f2" type="text" name="text2" />
 			</label>
-            <br />
-            <label for="f3">Email:<br />
+                <br />
+                <label for="f3">Email:<br />
 				<input id="f2" type="text" name="text2" />
 			</label>
-            <br>
-            <br>
-            <textarea>Share your thoughts!</textarea>
-            <br>
-            <label for="f15"><br />
+                <br>
+                <br>
+                <textarea>Share your thoughts!</textarea>
+                <br>
+                <label for="f15"><br />
 				<input id="f15" type="button" name="subbtn" value="Submit" />
 			</label>
-        </form>
+            </form>
 
 
-    </div>
+        </div>
 
 
 
