--- a/travelsite.html
+++ b/travelsite.html
@@ -197,9 +197,10 @@
             <ol>Passport/ID</ol>
             <ol>Wallet (Money)</ol>
             <ol>Bug Spray (Depends on destinaion)</ol>
+            <ol>Sunscreen lotion</ol>
             <ol>3.4oz Tolitries</ol>
             <ol>Medicine</ol>
-            <ol>Waterproof phone case</ol>
+            <ol>Waterproof pouch or phone case</ol>
             <ol>*More ideas in the video!</ol>
 
             <br>
